crates/loxide_parser/snapshots/parser/output/expression.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
    Err(
        Expect(
            "expression",
        ),
    ),
    Ok(
        Expr {
            kind: Assign(
                AssignExpr {
                    name: Identifier {
                        name: "a",
                    },
                    value: Expr {
                        kind: Variable(
                            Identifier {
                                name: "b",
                            },
                        ),
                    },
                },
            ),
        },
    ),
    Ok(
        Expr {
            kind: Assign(
                AssignExpr {
                    name: Identifier {
                        name: "a",
                    },
                    value: Expr {
                        kind: Assign(
                            AssignExpr {
                                name: Identifier {
                                    name: "b",
                                },
                                value: Expr {
                                    kind: Variable(
                                        Identifier {
                                            name: "c",
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
