crates/loxide_parser/snapshots/parser/output/fn_call.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        Expression(
            Expr {
                kind: Call(
                    CallExpr {
                        callee: Expr {
                            kind: Variable(
                                Identifier {
                                    name: "foo",
                                },
                            ),
                            span: [Span],
                        },
                        paren_token: [Span],
                        args: [
                            Expr {
                                kind: Literal(
                                    String(
                                        "abc",
                                    ),
                                ),
                                span: [Span],
                            },
                            Expr {
                                kind: Literal(
                                    String(
                                        "def",
                                    ),
                                ),
                                span: [Span],
                            },
                        ],
                    },
                ),
                span: [Span],
            },
        ),
        Expression(
            Expr {
                kind: Call(
                    CallExpr {
                        callee: Expr {
                            kind: Call(
                                CallExpr {
                                    callee: Expr {
                                        kind: Variable(
                                            Identifier {
                                                name: "nested",
                                            },
                                        ),
                                        span: [Span],
                                    },
                                    paren_token: [Span],
                                    args: [
                                        Expr {
                                            kind: Literal(
                                                String(
                                                    "foo",
                                                ),
                                            ),
                                            span: [Span],
                                        },
                                    ],
                                },
                            ),
                            span: [Span],
                        },
                        paren_token: [Span],
                        args: [
                            Expr {
                                kind: Literal(
                                    String(
                                        "bar",
                                    ),
                                ),
                                span: [Span],
                            },
                        ],
                    },
                ),
                span: [Span],
            },
        ),
        Expression(
            Expr {
                kind: Call(
                    CallExpr {
                        callee: Expr {
                            kind: Call(
                                CallExpr {
                                    callee: Expr {
                                        kind: Variable(
                                            Identifier {
                                                name: "foo",
                                            },
                                        ),
                                        span: [Span],
                                    },
                                    paren_token: [Span],
                                    args: [],
                                },
                            ),
                            span: [Span],
                        },
                        paren_token: [Span],
                        args: [],
                    },
                ),
                span: [Span],
            },
        ),
    ],
    [],
)
