crates/loxide_parser/snapshots/parser/output/for_statement.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        For(
            ForStmt {
                initializer: Some(
                    VarDeclaration(
                        Identifier {
                            name: "a",
                        },
                        Some(
                            Expr {
                                kind: Literal(
                                    Number(
                                        1.0,
                                    ),
                                ),
                                span: [Span],
                            },
                        ),
                    ),
                ),
                condition: Some(
                    Expr {
                        kind: Binary(
                            BinaryExpr {
                                lhs: Expr {
                                    kind: Variable(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                    span: [Span],
                                },
                                rhs: Expr {
                                    kind: Literal(
                                        Number(
                                            10.0,
                                        ),
                                    ),
                                    span: [Span],
                                },
                                operator: Less,
                            },
                        ),
                        span: [Span],
                    },
                ),
                increment: Some(
                    Expr {
                        kind: Assign(
                            AssignExpr {
                                name: Identifier {
                                    name: "a",
                                },
                                value: Expr {
                                    kind: Binary(
                                        BinaryExpr {
                                            lhs: Expr {
                                                kind: Variable(
                                                    Identifier {
                                                        name: "a",
                                                    },
                                                ),
                                                span: [Span],
                                            },
                                            rhs: Expr {
                                                kind: Literal(
                                                    Number(
                                                        1.0,
                                                    ),
                                                ),
                                                span: [Span],
                                            },
                                            operator: Plus,
                                        },
                                    ),
                                    span: [Span],
                                },
                            },
                        ),
                        span: [Span],
                    },
                ),
                body: Block(
                    [
                        PrintStmt(
                            Expr {
                                kind: Variable(
                                    Identifier {
                                        name: "a",
                                    },
                                ),
                                span: [Span],
                            },
                        ),
                    ],
                ),
            },
        ),
        For(
            ForStmt {
                initializer: None,
                condition: None,
                increment: None,
                body: Block(
                    [],
                ),
            },
        ),
    ],
    [],
)
