crates/loxide_parser/snapshots/parser/output/primary.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Literal(
                Nil,
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Boolean(
                    true,
                ),
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Boolean(
                    false,
                ),
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                String(
                    "hello world",
                ),
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Literal(
                Number(
                    123.0,
                ),
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Grouped(
                Expr {
                    kind: Binary(
                        BinaryExpr {
                            lhs: Expr {
                                kind: Unary(
                                    UnaryExpr {
                                        operator: Minus,
                                        expr: Expr {
                                            kind: Literal(
                                                Number(
                                                    123.0,
                                                ),
                                            ),
                                            span: [Span],
                                        },
                                    },
                                ),
                                span: [Span],
                            },
                            rhs: Expr {
                                kind: Literal(
                                    Number(
                                        456.0,
                                    ),
                                ),
                                span: [Span],
                            },
                            operator: Plus,
                        },
                    ),
                    span: [Span],
                },
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Variable(
                Identifier {
                    name: "foo",
                },
            ),
            span: [Span],
        },
    ),
    Ok(
        Expr {
            kind: Variable(
                Identifier {
                    name: "bar",
                },
            ),
            span: [Span],
        },
    ),
]
