crates/loxide_parser/snapshots/parser/output/return_stmt.snap
---
source: crates/loxide_parser/src/parser.rs
expression: results
---
(
    [
        Stmt {
            kind: FunDeclaration(
                FunDeclaration {
                    name: Identifier {
                        name: "foo",
                        span: [Span],
                    },
                    paren_token: [Span],
                    params: [],
                    body: [
                        Stmt {
                            kind: ReturnStmt(
                                ReturnStmt {
                                    value: None,
                                },
                            ),
                            span: [Span],
                        },
                    ],
                },
            ),
            span: [Span],
        },
        Stmt {
            kind: FunDeclaration(
                FunDeclaration {
                    name: Identifier {
                        name: "bar",
                        span: [Span],
                    },
                    paren_token: [Span],
                    params: [],
                    body: [
                        Stmt {
                            kind: ReturnStmt(
                                ReturnStmt {
                                    value: Some(
                                        Expr {
                                            kind: Variable(
                                                Identifier {
                                                    name: "bar",
                                                    span: [Span],
                                                },
                                            ),
                                            span: [Span],
                                        },
                                    ),
                                },
                            ),
                            span: [Span],
                        },
                    ],
                },
            ),
            span: [Span],
        },
    ],
    [],
)
